# urbansdk

./: ARCHITECTURE.md  LICENSE  README.md  create_database.sql  create_tables.sql  pyproject.toml
app/: main.py  notebook2.ipynb
app/core/: config.py  logging_conf.py
app/db/: database.py
app/helpers/: __init__.py  periods.py
app/models/: aggregate.py  aggregate_link.py  spatial_filter.py
app/routers/: aggregate.py  aggregate_link.py  spatial_filter.py
app/services/: aggregate.py
load_data/: load_link.py  load_speed_records.py
migrations/: 001_change_geojson_to_geometry.sql
tests/: conftest.py  test_aggregate_link_router.py  test_aggregate_router.py  test_aggregate_service.py  test_spatial_filter_router.py
